--- a/bootstrap-prestructure.htm
+++ b/bootstrap-prestructure.htm
@@ -10,7 +10,9 @@
 <script src="js/bootstrap.min.js"></script>
 
 </head>
+
   <body>
+  <div class="container"> <!-- add this div as the container -->
     <div class='row'>
       <div class="col-md-6"><img src="./bootstrap-prestructure_files/100x100"></div>
       <div class="col-md-6">
@@ -18,36 +20,38 @@
         <h3>Front-end Ninja</h3>
       </div>
     </div>
-    <div>
+    <div class="row">
       <img src="./bootstrap-prestructure_files/1140x350">
     </div>
-    <div>
+	<div class="row"> <!--add this new div as a row -->
+    <div class = "col-md-6">
       <h2>Featured Work</h2>
     </div>
-    <div>
-      <div>
+	</div>
+    <div class="row">
+      <div class ="col-md-6">
         <img src="./bootstrap-prestructure_files/555x300">
         <h3>Appify</h3>
         <p><a href="http://github.com/">Link to project</a></p>
       </div>
-      <div>
-        <img src="./bootstrap-prestructure_files/555x300">
-        <h3>Appify</h3>
-        <p><a href="http://github.com/">Link to project</a></p>
-      </div>
-    </div>
-    <div>
-      <div>
-        <img src="./bootstrap-prestructure_files/555x300">
-        <h3>Appify</h3>
-        <p><a href="http://github.com/">Link to project</a></p>
-      </div>
-      <div>
+      <div class="col-md-6">
         <img src="./bootstrap-prestructure_files/555x300">
         <h3>Appify</h3>
         <p><a href="http://github.com/">Link to project</a></p>
       </div>
     </div>
-
+    <div class="row">
+      <div class="col-md-6">
+        <img src="./bootstrap-prestructure_files/555x300">
+        <h3>Appify</h3>
+        <p><a href="http://github.com/">Link to project</a></p>
+      </div>
+      <div class="col-md-6">
+        <img src="./bootstrap-prestructure_files/555x300">
+        <h3>Appify</h3>
+        <p><a href="http://github.com/">Link to project</a></p>
+      </div>
+    </div>
+    </div>
   
 </body></html>
