--- a/bootstrap-prestructure.htm
+++ b/bootstrap-prestructure.htm
@@ -7,6 +7,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 
 <link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/style.css">
+<link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
+<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 
 </head>
@@ -14,23 +18,28 @@
   <body>
   <div class="container"> <!-- add this div as the container -->
     <div class='row'>
-      <div class="col-md-6"><img src="./bootstrap-prestructure_files/100x100"></div>
-      <div class="col-md-6">
-        <h1>Jane Doette</h1>
-        <h3>Front-end Ninja</h3>
+      <div class="col-md-6"><img class="title-logo" src="./bootstrap-prestructure_files/100x100"></div>
+      <div class="col-md-6 text-right text-uppercase">
+        <h1 class="title-super text-thin">Jane Doette</h1>
+        <h3 class="text-right text-uppercase">Front-end Ninja</h3>
       </div>
     </div>
+	<div class="row"> <!-- add a horizontal line -->
+	  <div class="col-md-12">
+	 <hr>
+	 </div>
+	</div>
     <div class="row">
-      <img src="./bootstrap-prestructure_files/1140x350">
+      <img class=" img-responsive img-fluid" src="./bootstrap-prestructure_files/1140x350">
     </div>
 	<div class="row"> <!--add this new div as a row -->
-    <div class = "col-md-6">
-      <h2>Featured Work</h2>
+    <div class = "col-md-12">
+      <h2 class="text-muted">Featured Work</h2>
     </div>
 	</div>
     <div class="row">
       <div class ="col-md-6">
-        <img src="./bootstrap-prestructure_files/555x300">
+        <img src="./bootstrap-prestructure_files/555x300" data-toggle="modal" data-target="#project1">
         <h3>Appify</h3>
         <p><a href="http://github.com/">Link to project</a></p>
       </div>
@@ -52,6 +61,24 @@
         <p><a href="http://github.com/">Link to project</a></p>
       </div>
     </div>
+    </div>
+	
+	<!-- Modal -->
+    <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+                </div>
+                <div class="modal-body">
+                    <img class="img-responsive" src="images/555.jpeg">
+                    This was my first project in this class. I learned a lot about HTML and CSS.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
     </div>
   
 </body></html>
